--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rishabhjha12-hub.github.io/TENn",
+  "homepage": ".",
   "name": "ten",
   "version": "0.1.0",
   "private": true,
